tests/parse/error/list_unclosed_right1.err
Error: Unexpected end of input, expected <expression>
   ╭─[tests/parse/error/list_unclosed_right1.scm:1:10]
   │
 1 │ (3132 ( a
   ·          ┬  
   ·          ╰── Unexpected end of file
───╯
